--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,62 +1,72 @@
 <div class="container">
 	<div class="row">
-		<div class="pull-left span6">
+		<div class="pull-left col-md-6">
 			<% if signed_in? %>
-				<p><%=link_to("Logout", "logout", :class=>"btn") %></p>
-				Your social links:
-				
-				<% if current_user.link('facebook').nil? %>
-					<p><%=link_to("Link your Facebook", "/auth/facebook", :class=>"zocial facebook") %> </p>
-				<% else %>
-					Your Facebook Accout: <%= current_user.link('facebook').uid %>
-				<% end %>
-				<br>
-				<% if current_user.link('google_oauth2').nil? %>
-					<p><%=link_to("Link your Google", "/auth/google_oauth2", :class=>"zocial googleplus") %> </p>
-				<% else %>
-					Your Google Accout: <%= current_user.link('google_oauth2').uid %>
-				<% end %>
-				<br>
+			<p><%=link_to("Logout", "logout", :class=>"btn") %></p>
+			Your social links:
+			
+			<% if current_user.link('facebook').nil? %>
+			<p><%=link_to("Link your Facebook", "/auth/facebook", :class=>"zocial facebook") %> </p>
 			<% else %>
-				<p><%=link_to("Login Facebook", "/auth/facebook", :class=>"zocial facebook") %> </p>
-				<p><%=link_to("Login your Google", "/auth/google_oauth2", :class=>"zocial googleplus") %> </p>
-				<p><%=link_to("Login Regular", "login", :class=>"btn") %></p>
-				
-				<p><%=link_to("Registo Regular", "signup", :class=>"btn") %></p>	
+			Your Facebook Accout: <%= current_user.link('facebook').uid %>
 			<% end %>
-
-
+			<br>
+			<% if current_user.link('google_oauth2').nil? %>
+			<p><%=link_to("Link your Google", "/auth/google_oauth2", :class=>"zocial googleplus") %> </p>
+			<% else %>
+			Your Google Accout: <%= current_user.link('google_oauth2').uid %>
+			<% end %>
+			<br>
+			<% else %>
+			<p><%=link_to("Login Facebook", "/auth/facebook", :class=>"zocial facebook") %> </p>
+			<p><%=link_to("Login your Google", "/auth/google_oauth2", :class=>"zocial googleplus") %> </p>
+			<p><%=link_to("Login Regular", "login", :class=>"btn") %></p>
+			
+			<p><%=link_to("Registo Regular", "signup", :class=>"btn") %></p>
+			<% end %>
 		</div>
-
-		<div class="pull-right span4">
+		<div class="pull-right col-md-4">
 			<p>The User Currently Loged in is : </p>
 			<% if signed_in? %>
-			  <%= current_user.id %>
-			  <%= current_user.name %>
-			  <%= current_user.email %>
+			<%= current_user.id %>
+			<%= current_user.name %>
+			<%= current_user.email %>
 			<% else %>
-			  Ninguém
+			Ninguém
 			<% end %>
 		</div>
 	</div>
-
-	<div class="row">
-		<div>
-			Users and Authentications:
-			<ul>
-			<% @users.each do |user| %>
-			  <li>
-				<%= user.inspect %>
-				<ul>
-				  <% user.authentications.each do |auth| %>
-				    <li>
-					  <%= auth.inspect %>
-					</li>
-				  <% end %>
-				</ul>
-			  </li>	
-			<% end %>
-			</ul>
+	<div class="panel-group" id="accordion">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h4 class="panel-title">
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+				Users Registered
+				</a>
+				</h4>
+			</div>
+			<div id="collapseOne" class="panel-collapse collapse">
+				<div class="panel-body">
+					<div>
+						Users and Authentications:
+						<ul>
+							<% @users.each do |user| %>
+							<li>
+								<%= user.inspect %>
+								<ul>
+									<% user.authentications.each do |auth| %>
+									<li>
+										<%= auth.inspect %>
+									</li>
+									<% end %>
+								</ul>
+							</li>
+							<% end %>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
+		
 	</div>
 </div>
