--- a/app/views/studies/_form.html.erb
+++ b/app/views/studies/_form.html.erb
@@ -22,7 +22,9 @@
   <div class="field">
     <%= f.label :study_link %><br />
     <%= f.text_field :study_link %>
+  <a href="/strutapp" class="btn btn-default">Start Composing</a>
   </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
