--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,6 +34,8 @@
 			<% else %>
 			Ninguém
 			<% end %>
+			<hr>
+			<%= link_to "Studies", studies_path %>
 		</div>
 	</div>
 	<div class="panel-group" id="accordion">
