no caminho certo

--- a/app/views/studies/_form.html.erb
+++ b/app/views/studies/_form.html.erb
@@ -20,8 +20,10 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :study_link %><br />
-    <%= f.text_field :study_link %>
+    <%= f.label :presentation %><br />
+    <%= f.file_field :presentation %>
+
+
   <a href="/strutapp/" class="btn btn-default">Start Composing</a>
   </div>
 
