--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -12,7 +12,8 @@
 
 <p>
   <b>Study link:</b>
-  <%= @study.study_link %>
+  <a href="/dist/preview_export/bespoke.html#<%= @study.presentation %>">adasdsad</a>
+ 
 </p>
 
 
