--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,19 +1,12 @@
 <br />
 <% @studies.each do |study| %>
   
-    
-   
-    
-    
-
-
-
-<div class="col-lg-3">
+<div class="col-md-3">
 
 <div class="cover">
           <a href="<%= study.study_link %>">
             <hgroup>
-           
+         
             <h2> <%= study.name %></h2>
 
             <h3><i class="serif">By</i> AuthorName</h3>
@@ -28,6 +21,7 @@
             </ul>
           </a>
         </div>
+        
     <%= study.description %>
    
 <%= link_to 'Destroy', study, method: :delete, data: { confirm: 'Are you sure?' } %>
